--- a/Alan/src/main/webapp/index.html
+++ b/Alan/src/main/webapp/index.html
@@ -3,8 +3,10 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link type="text/css" rel="stylesheet" href="/WEB-INF/css/bootstrap-theme.min.css"> 
+        <link type="text/css" rel="stylesheet" href="/WEB-INF/css/bootstrap-min.css">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Projeto Alan</h1>
     </body>
 </html>
