Pasta CSS com bootstrap

--- a/Alan/src/main/webapp/index.html
+++ b/Alan/src/main/webapp/index.html
@@ -3,10 +3,33 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link type="text/css" rel="stylesheet" href="/WEB-INF/css/bootstrap-theme.min.css"> 
-        <link type="text/css" rel="stylesheet" href="/WEB-INF/css/bootstrap-min.css">
+        <link rel="stylesheet" href="resources/css/bootstrap.min.css"> 
+        <link rel="stylesheet" href="resources/css/bootstrap.css">
+        
     </head>
     <body>
-        <h1>Projeto Alan</h1>
+        <div class="container">
+            <div class="jumbotron">
+                <h1>My First Bootstrap Page</h1>
+                <p>Resize this responsive page to see the effect!</p> 
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <h3>Column 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                </div>
+                <div class="col-sm-4">
+                    <h3>Column 2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                </div>
+                <div class="col-sm-4">
+                    <h3>Column 3</h3> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
