--- a/Alan/src/main/webapp/index.html
+++ b/Alan/src/main/webapp/index.html
@@ -3,14 +3,10 @@
     <head>
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="resources/css/bootstrap.min.css">
         <link rel="stylesheet" href="resources/css/style.css">
     </head>
     <body class="jumbotron">
-        <!--        <h1>Projeto Alan</h1>-->
-
         <h1> Projeto Alan</h1>
         <div>            
             <nav class="navbar navbar-inverse">
@@ -33,10 +29,75 @@
                         <li><a href="CadastroFilial">Relatorios</a></li>
                     </ul>
                 </div>
-
             </nav>
         </div>
+        <div class="container">
+            <h2>Cadastro de Usuários </h2>
+            <div class="box">
+                <form>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="UsuarioId">ID</label>
+                                <input type="text" class="form-control" id="UsuarioId" name="UsuarioId" value="4562" disabled>
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="Nome">Nome</label>
+                                <input type="text" class="form-control" id="nome" name="Nome" placeholder="Nome">
+                            </div>                        
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="PerfilId">Perfil</label>
+                                <select class="form-control" name="PerfilId">
+                                    <option value="0">Selecione...</option>
+                                    <option value="1">Gerente</option>
+                                    <option value="2">Vendedor</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="FilialId">Filial</label>
+                                <select class="form-control" id="FilialId" name="FilialId">
+                                    <option value="0">Selecione...</option>
+                                    <option value="1">Filial RJ</option>
+                                    <option value="2">Filial SP</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="Login">Login</label>
+                                <input type="text" class="form-control" id="login" name="Login" placeholder="Login">
+                            </div> 
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="block">Status</label>
+                                <input type="radio" id="Ativo" name="Status" value="true" /><label for="Ativo" class="espacamento">Ativo</label>
+                                <input type="radio" id="Inativo" name="Status" value="false" /><label for="Inativo">Inativo</label>
+                            </div> 
+                        </div>
+                    </div>
 
-        <script src="resources/js/bootstrap.js"></script>
+                    <div class="right">
+                        <button type="submit" class="btn btn-success">Salvar</button>
+                        <button type="button" class="btn btn-danger">Excluir</button>
+                        <button type="button" class="btn btn-default">Cancelar</button>
+                    </div>
+                </form>  
+            </div>
+            
+        </div>
+
+        <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"></script>
+        <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
     </body>
 </html>
