Include de filial concluido!

--- a/Alan/src/main/webapp/index.html
+++ b/Alan/src/main/webapp/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" href="resources/css/bootstrap.min.css">
-        <link rel="stylesheet" href="resources/css/style.css">
+        <meta charset="utf-8">
+        <!--        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>-->
+        <link rel="stylesheet" href="resources/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="resources/css/style.css"/>
     </head>
     <body class="jumbotron">
         <h1> Projeto Alan</h1>
@@ -17,7 +18,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/Alan">Home</a></li>
                         <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastro
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastrar
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
