--- a/Alan/src/main/webapp/index.html
+++ b/Alan/src/main/webapp/index.html
@@ -42,7 +42,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Filial</a></li>
-                                <li><a href="#">Usuário</a></li>
+                                <li><a href="BuscaUsuarios">Usuário</a></li>
                                 <li><a href="#">Produto</a></li>
                             </ul>
                         </li>
