--- a/Alan/src/main/webapp/index.html
+++ b/Alan/src/main/webapp/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Start Page</title>
-        
-        <!--        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>-->
+
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <link rel="stylesheet" href="resources/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="resources/css/style.css"/>
     </head>
