--- a/Alan/src/main/webapp/index.html
+++ b/Alan/src/main/webapp/index.html
@@ -2,56 +2,12 @@
 <html>
     <head>
         <title>Start Page</title>
-
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <link rel="stylesheet" href="resources/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="resources/css/style.css"/>
     </head>
-    <body class="jumbotron">
-        <h1> Projeto Alan</h1>
-        <div>            
-            <nav class="navbar navbar-inverse">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="/Alan">Alan</a>
-                    </div>
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="/Alan">Home</a></li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastrar
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="CadastroFilial">Filial</a></li>
-                                <li><a href="CadastroUsuario">Usuário</a></li>
-                                <li><a href="CadastroProduto">Produto</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Movimentação
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Entrada</a></li>
-                                <li><a href="#">Saída</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Busca
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Filial</a></li>
-                                <li><a href="BuscaUsuarios">Usuário</a></li>
-                                <li><a href="#">Produto</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Relatorios</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>        
-        <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"></script>
-        <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
+    <body>
+    <script type="text/javascript">
+        var url = document.location.href + "Home";
+        document.location.href = url;
+    </script>
     </body>
 </html>
